--- a/data/coco128.yaml
+++ b/data/coco128.yaml
@@ -8,17 +8,17 @@
 
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
-path: ../datasets/coco128  # dataset root dir
-train: images/train2017  # train images (relative to 'path') 128 images
-val: images/train2017  # val images (relative to 'path') 128 images
+#path: ../datasets/coco128  # dataset root dir
+train: coco128/images/train2017  # train images (relative to 'path') 128 images
+val: coco128/images/train2017  # val images (relative to 'path') 128 images
 test:  # test images (optional)
 
 # Classes
 names:
-  0: person
+  0: child sign
   1: bicycle
   2: car
-  3: motorcycle
+  3: stop sign
   4: airplane
   5: bus
   6: train
@@ -26,7 +26,7 @@ names:
   8: boat
   9: traffic light
   10: fire hydrant
-  11: stop sign
+  11: 
   12: parking meter
   13: bench
   14: bird
@@ -94,7 +94,7 @@ names:
   76: scissors
   77: teddy bear
   78: hair drier
-  79: toothbrush
+  79: 
 
 
 # Download script/URL (optional)
